rename files, remove scrollbar during loading & fix loader position

--- a/src/modules/app/components/content/style.scss
+++ b/src/modules/app/components/content/style.scss
@@ -3,7 +3,7 @@
 
     &__image {
         position: absolute;
-        bottom: 0;
+        top: 25%;
         width: 100%;
         height: 100%;
         display: flex;
